Fixed logo sizing on iOS.

--- a/app/client/src/components/app-toolbar/app-toolbar.scss
+++ b/app/client/src/components/app-toolbar/app-toolbar.scss
@@ -16,6 +16,7 @@ mat-toolbar {
 
   app-logo {
     height: 16px;
+    width: 120px;
   }
 
   ::ng-deep {
