--- a/app/client/src/components/logo/logo.scss
+++ b/app/client/src/components/logo/logo.scss
@@ -9,6 +9,10 @@
 img.main {
   flex: 1 1 auto;
   height: 45%;
+
+  &.no-attribution {
+    height: 100%;
+  }
 }
 
 img.attribution {
