--- a/app/client/src/pages/splash/splash.scss
+++ b/app/client/src/pages/splash/splash.scss
@@ -2,16 +2,19 @@
 
 :host {
   @include centered-page;
-  max-width: 75vh;
+  justify-content: space-between;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 20px;
+  box-sizing: border-box;
 
   &:before {
-    flex-basis: 190px;
+    flex-basis: 50%;
   }
 
   &:after {
-    flex-basis: 175px;
+    display: none;
   }
 }
 
@@ -40,18 +43,19 @@ video {
 .logos {
   width: 300px;
   max-width: 100%;
-  padding: 0 20px;
   position: relative;
 }
 
 .credits {
-  margin: 0;
-  padding: 0 20px;
+  flex: 1 1 50%;
+  margin: 0 0 40px 0;
+  padding: 0;
   list-style-type: none;
   transition-delay: 2s;
   text-align: center;
-  position: absolute;
-  bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   li {
     margin: 0;
